objects/ssot__EntpUserIdentification__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnterpriseSource__c</fullName>
        <label>Enterprise Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnterpriseUserId__c</fullName>
        <label>Enterprise User</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnterpriseUserIdentificationType__c</fullName>
        <label>Enterprise User Identification Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnterpriseUserIdentificationValText__c</fullName>
        <label>Enterprise User Identification Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Enterprise User Identification Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1743122254975_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EntpUserIdentification_EnterpriseUse_rel</label>
        <referenceTo>ssot__EntpUser__dlm</referenceTo>
        <relationshipLabel>EntpUserIdentification_EnterpriseUse_rel</relationshipLabel>
        <relationshipName>rel_1743122254975_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>